style.css
:root {
    --shadow-color: 0deg 0% 0%;
    --shadow-elevation-low:
        0px 0.5px 0.6px hsl(var(--shadow-color) / 0.1),
        0px 0.8px 0.9px -1.2px hsl(var(--shadow-color) / 0.1),
        0px 2px 2.3px -2.5px hsl(var(--shadow-color) / 0.1);
    --shadow-elevation-medium:
        0px 0.5px 0.6px hsl(var(--shadow-color) / 0.11),
        0px 1.6px 1.8px -0.8px hsl(var(--shadow-color) / 0.11),
        0px 4.1px 4.6px -1.7px hsl(var(--shadow-color) / 0.11),
        0px 9.9px 11.1px -2.5px hsl(var(--shadow-color) / 0.11);
    --shadow-elevation-high:
        0px 0.5px 0.6px hsl(var(--shadow-color) / 0.1),
        0px 2.9px 3.3px -0.4px hsl(var(--shadow-color) / 0.1),
        0px 5.4px 6.1px -0.7px hsl(var(--shadow-color) / 0.1),
        0px 8.9px 10px -1.1px hsl(var(--shadow-color) / 0.1),
        -0.1px 14.2px 16px -1.4px hsl(var(--shadow-color) / 0.1),
        -0.1px 22.1px 24.9px -1.8px hsl(var(--shadow-color) / 0.1),
        -0.1px 33.6px 37.8px -2.1px hsl(var(--shadow-color) / 0.1),
        -0.2px 49.5px 55.7px -2.5px hsl(var(--shadow-color) / 0.1);
}


@font-face {
    font-family: "Mona Sans";
    src: url("./Fonts/Mona Sans/Mona-Sans.ttf");
}

html,
body {
    margin: 0;
    padding: 0;
}

body {
    background-color: #010409;
    min-height: 100dvh;
}

body * {
    font-family: "Mona Sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: #E6EDF3;
}

header {
    position: sticky;
    top: 0;
    user-select: none;
    min-height: 5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: x-large;
    background-color: #010409;
    border-bottom: #21262D solid 0.5pt;
    box-shadow: var(--shadow-elevation-high);
}

header h1,
footer h3 {
    margin: 0;
    padding: 0;
}

footer {
    user-select: none;
    min-height: 7rem;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: x-large;
    background-color: #010409;
    border-top: #21262D solid 0.5pt;
}

.container {
    background-color: #0D1117;
    width: 100%;
    min-height: calc(100dvh - 18rem - 2pt);
    display: flex;
    gap: 2rem;
    flex-direction: column;
    justify-content: start;
    align-items: center;
    padding-top: 4rem;
    padding-bottom: 2rem;
}

input {
    min-width: 7rem;
    width: 50%;
    height: 3rem;
    padding: 0.5rem;
    color: #0D1117;
    background-color: #E6EDF3;
    box-shadow: var(--shadow-elevation-high);
    border: none;
    border-radius: 1.5rem;
    font-size: larger;
    font-weight: 500;
}

.table-container {
    max-width: 100%;
    border-radius: 2rem;
    overflow-x: auto;
    border: none;
}

#table {
    --rows: 5;
    --columns: 3;

    height: 100%;
    width: fit-content;

    display: grid;
    gap: 0.125rem;
    justify-content: center;
    grid-template-columns: repeat(var(--columns), 5rem);
    grid-template-rows: repeat(var(--rows), 2.5rem);
}

.table-cell {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #E6EDF3;
    border: #0D1117 1pt solid;
    border-radius: 0.25rem;

    color: #0D1117;
    font-size: larger;
    font-weight: bold;
}

.result {
    background-color: #76a6d0;
}

a {
    color: #76a6d0;
    text-decoration: none;
}

a:hover {
    text-decoration: underline 3pt;
}

@media only screen and (max-width:475px) {
    input {
        width: 75%;
    }
}

